First attempt at wrapping to KMP
It almost works... but libjaunch does not depend on libdl
for some reason, so the Kotlin compilation fails.